# bbapi_toolkit

./: .gitignore  MANIFEST.in  README.md  config.ini.example  pyproject.toml  requirements.txt
bbapi_toolkit/: LICENSE  README.md  __init__.py  config.ini
bbapi_toolkit/onapi/: extras.py
bbapi_toolkit/onapi/endpoints/admissions/: __init__.py
bbapi_toolkit/onapi/endpoints/athletics/: __init__.py
bbapi_toolkit/onapi/endpoints/constituents/: __init__.py  occupation.py
onapi/: __init__.py  extras.py  list.py  school_info.py  unpublished.py
onapi/academics/: assignments.py
onapi/constituents/: education.py  role.py  user.py
onapi/content/: announcements.py  events.py
onapi/endpoints/: list.py  school_info.py  unpublished_endpoints.py
onapi/endpoints/academics/: __init__.py  assignments.py
onapi/endpoints/constituents/: role.py  user.py
skyapi/: __init__.py  extras.py  school.py
skyapi/school/: __init__.py  academics_courses.py  academics_departments.py  academics_enroll_students_into_sections.py  academics_master_schedule.py  academics_schedule_set.py  academics_schedule_sets_by_level.py  academics_sections_by_school_level.py  building_list.py  core_levels.py  core_roles.py  core_terms.py  cycles_by_section.py  legacy_list.py  level_list.py  schedule_set_list.py  section_list_by_school_level.py  term_list.py  users_addresses_by_user.py  v1legacylistsbylist_idget.py  year_list.py
src/bbapi_toolkit/: __init__.py  config.ini.example
src/bbapi_toolkit/onapi/: school_info.py  unpublished.py
src/bbapi_toolkit/skyapi/: __init__.py  extras.py
(+13 files in other folders)
